--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,12 +2,12 @@
   <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 	  <div class="top-text">
-		<h1>Welcom to
-		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+		<h1>Welcom to<i class="fas fa-book"></i>
+		  
 		  <b>Bookers!!</b>
 		</h1>
-		<p>In
-		  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+		<p>In<i class="fas fa-book"></i>
+		  
 		  <b>Bookers</b>,<br>
 		  	you can share and exchange your opinions , inpresiions , and emotions<br>
 		  	about various books!
