--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,58 +4,60 @@
     <title>Bookers</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body class="header">
-    <header class="navbar navbar-fixed-top navbar-inverse">
+  
+    <header class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <nav class="nav navbar-left">
-            <span class="title">Bookers</span>
+        <nav class="navbar navbar-expand-lg navbar-light">
+           <%=link_to "Bookers", root_path  %>
+           
         </nav>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              <li class="">
+              <li>
                 <%= link_to user_path(current_user), class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                <i class="fas fa-home">Home</i>
+                
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to users_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
+                <span> Users</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to books_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
+                <span> Books</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
+                <span> Logout</span>
                 <% end %>
               </li>
             <% else %>
-              <li class="">
+              <li>
                 <%= link_to root_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                <span> Home</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to home_about_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
+                <span> About</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to new_user_registration_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-edit" aria-hidden="true"> sign up</span>
+                <span> sign up</span>
                 <% end %>
               </li>
-              <li class="">
+              <li>
                 <%= link_to new_user_session_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> login</span>
+                <span> login</span>
                 <% end %>
               </li>
             <% end %>
@@ -63,15 +65,22 @@
         </nav>
       </div>
     </header>
-    <div class="body">
+    
       <p class="notice"><%= notice %></p>
 
       <%= yield %>
 
 
-        <footer>
-          <p class="text-right"> CopyRight Infratop.inc</p>
-        </footer>
+   <footer>
+    <div class='container mt-5'>
+    	<div class='row'>
+    	  <div class='mx-auto'>
+    		  <p>CopyRight Infratop.inc</p>
+    	  </div>
+      </div>
+    </div>
+  </footer>
+
       </div>
     </div>
   </body>
