--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -16,8 +16,8 @@
     </tr>
     <tr>
       <th colspan="2">
-        <%= link_to edit_user_path(current_user), class:"btn btn-default btn-block" do %>
-        <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+        <%= link_to  edit_user_path(current_user), class:"btn btn-secondary" do %>
+        <span >User settings</span>
       <% end %>
       </th>
     </tr>
