--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  
- * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;;
@@ -29,7 +29,7 @@ clearfix::after {
   clear: both;
 }
 .title {
-  color: #000;
+  color: #fff;
   font-size: 20px;
 }
 .body {
