--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,25 +1,28 @@
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-3">
-      <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
-      <%= render 'books/book', book: @newbook %>
-    </div>
-    <div class="col-xs-9">
-      <h1>Book detail</h1>
-      <table class="table table-user-show">
+  
+<div class="row">
+  <%= render 'layouts/sidebar', book: @new_book, user: @user %>
+  <div class="col-md-8 offset-md-1">
+    <h2>Book detail</h2>
+    <table class="table">
+      <tbody>
         <tr>
-          <td><%= attachment_image_tag @user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg"%></td>
-          <td><%= link_to @user.name, user_path(@user) %></td>
-          <td><%= @book.title %></td>
+          <td>
+            <%= link_to user_path(@user) do %>
+              <%= attachment_image_tag @book.user, :profile_image, size: "40x40", fallback: "no_image.jpg", size: "40x40" %><br>    
+              <%= @book.user.name %>
+            <% end %>  
+          </td>
+          
+          <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <% if @book.user_id == current_user.id %>
-            <td><%= link_to "Edit", edit_book_path(@book), class:"btn btn-success"%></td>
-            <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"}, class:"btn btn-danger" %></td>
+          
+          <% if @book.user == current_user %>
+          <td><%= link_to "Edit", edit_book_path(@book),class: "btn btn-success" %></td>  
+          
+          <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか？"},class: "btn btn-danger" %></td>
           <% end %>
         </tr>
-      </table>
-    </div>
+      </tbody>
+    </table>
   </div>
 </div>
