--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,80 +8,62 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  
-    <header class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-           <%=link_to "Bookers", root_path  %>
-           
-        </nav>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <li>
-                <%= link_to user_path(current_user), class:"btn btn-link" do %>
-                <i class="fas fa-home">Home</i>
-                
-                <% end %>
+
+    <header>
+      <nav class="navbar bg-dark navbar-expand-lg">
+        <div class="container">
+          <a href="/" class="navbar-brand text-light">Bookers</a>
+          <% if user_signed_in? %>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <%= link_to " Home", user_path(current_user.id),class: "nav-link text-light fas fa-home" %>
               </li>
-              <li>
-                <%= link_to users_path, class:"btn btn-link" do %>
-                <span> Users</span>
-                <% end %>
+              <li class="nav-item">
+                <a href="/users" class="nav-link text-light fas fa-users"> Users</a>
               </li>
-              <li>
-                <%= link_to books_path, class:"btn btn-link" do %>
-                <span> Books</span>
-                <% end %>
+              <li class="nav-item">
+                <a href="/books" class="nav-link text-light fas fa-book-open"> Books</a>
               </li>
-              <li>
-                <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
-                <span> Logout</span>
-                <% end %>
+              <li class="nav-item">
+                <a href="/users/sign_out" data-method="delete"  class="nav-link text-light fas fa-sign-out-alt"> logout</a>
               </li>
-            <% else %>
-              <li>
-                <%= link_to root_path, class:"btn btn-link" do %>
-                <span> Home</span>
-                <% end %>
+            </ul>
+          <% else %>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="/" class="nav-link text-light fas fa-home"> Home</a>
               </li>
-              <li>
-                <%= link_to home_about_path, class:"btn btn-link" do %>
-                <span> About</span>
-                <% end %>
+              <li class="nav-item">
+                <a href="/home/about" class="nav-link text-light fas fa-link"> About</a>
               </li>
-              <li>
-                <%= link_to new_user_registration_path, class:"btn btn-link" do %>
-                <span> sign up</span>
-                <% end %>
+              <li class="nav-item">
+                <a href="/users/sign_up" class="nav-link text-light fas fa-user-plus"> sign up</a>
               </li>
-              <li>
-                <%= link_to new_user_session_path, class:"btn btn-link" do %>
-                <span> login</span>
-                <% end %>
+              <li class="nav-item">
+                <a href="/users/sign_in" class="nav-link text-light fas fa-sign-in-alt"> login</a>
               </li>
-            <% end %>
-          </ul>
-        </nav>
-      </div>
+            </ul>
+          <% end %>
+        </div>
+      </nav>
     </header>
-    
-      <p class="notice"><%= notice %></p>
 
-      <%= yield %>
-
-
-   <footer>
-    <div class='container mt-5'>
-    	<div class='row'>
-    	  <div class='mx-auto'>
-    		  <p>CopyRight Infratop.inc</p>
-    	  </div>
+    <main class="mt-3">
+      <% if flash[:notice] %>
+        <p style="color: green;"><%= flash[:notice] %></p>
+      <% end %>
+      <div class="container">
+          <%= yield %>
       </div>
-    </div>
-  </footer>
-
+    </main>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto ">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
