--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,27 @@
-<h1>User info</h1>
-<%= form_for(@user) do |f| %>
-<%= render 'books/error', model: @user %>
-  <div class="user-name">Name</div>
-    <%= f.text_field :name %>
-  <div class="user-edit-image">Image</div>
-    <%= f.attachment_field :profile_image %>
-  <div class="form-body">Introduction</div>
-    <%= f.text_area :introduction %><br>
-  <div class="upload">
-    <%= f.submit " Update User" %>
+<div class="row">
+  <div class="col-5 mx-auto">
+  
+  <h2>User info</h2>
+  
+  <%= render 'layouts/error_form', user: @user %>
+  
+  <%= form_with model: @user, local: true do |f| %>
+    <div class="form-group">
+      <label for="inputName">Name</label><br>
+      <%= f.text_field :name, autofocus: true, id:"inputName", class: "form-control" %>
+    </div>
+    
+    <div class="form-group">
+      <label for="inputImage">ProfileImage</label><br>
+      <%= f.attachment_field :profile_image, autofocus: true, id:"inputImage", class: "form-control-file" %>
+    </div>
+    <div class="form-group">
+      <label for="inputBody">introduction</label><br>
+      <%= f.text_area :introduction, autofocus: true, id:"inputBody", class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Update User",class: "btn btn-secondary" %>
+    </div>
+  <% end %>
   </div>
-<% end %>
+</div>
