--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,28 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-3">
-      <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
-      <%= render 'books/book', book: @book %>
-    </div>
-    <div class="col-xs-9">
-  	  <table class="table table-sm user-index">
-	  	  <h2>Users</h2>
-        <thead>
+<div class="row">
+  <%= render 'layouts/sidebar', book: @book, user: @user %>
+  <div class="col-md-8 offset-md-1">
+    <h2>Users</h2>
+    <table class="table table-hover">
+      <thead>
+        <tr>
           <th>image</th>
           <th>name</th>
           <th></th>
-  	    </thead>
-  	  	<tbody>
-  	  	  <% @users.each do |user| %>
-	  	  	<tr>
-	  	  	  <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50,fallback: "no_image.jpg"%></td>
-	  	  	  <td><%= user.name %></td>
-	  	  	  <td><%= link_to "Show", "/users/#{user.id}" %></td>
-	  	  	</tr>
-  	  	  <% end %>
-  	  	</tbody>
-  	  </table>
-  	</div>
+        </tr>
+      </thead>
+      <% @users.each do |user| %>
+      <tbody>
+        <tr>
+          <td>
+            <%= link_to user_path(user) do %>
+              <%= attachment_image_tag user, :profile_image, size: "40x40", fallback: "no_image.jpg", size: "40x40" %>
+            <% end %>
+          </td>
+          <td><%= user.name %></td>
+          <td><%= link_to "Show", user_path(user) %></td>
+        </tr>
+      </tbody>
+      <% end %>
+    </table>
   </div>
+</div>
